# alien-recon

./: .gitignore  pyproject.toml  test.py
deprecated/: alien_recon_agent.py  alienrecon.py
src/: test.py
src/alienrecon/: cli.py
src/alienrecon.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/alienrecon/agents/: openai_client.py
src/alienrecon/core/: models.py  state.py
src/alienrecon/scanners/: gobuster.py  nmap.py
src/alienrecon/utils/: io.py
